# ChangeLog for media-sound/sound-juicer
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.213 2011/10/30 17:20:03 armin76 Exp $

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org> sound-juicer-2.32.0-r1.ebuild:
  alpha/ia64/sparc stable wrt #385699

  21 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  sound-juicer-2.32.0-r1.ebuild:
  x86 stable wrt bug #385699

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  sound-juicer-2.32.0-r1.ebuild:
  ppc/ppc64 stable wrt #385699

  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  sound-juicer-2.32.0-r1.ebuild:
  amd64 stable wrt #385699

*sound-juicer-2.99.0_pre20111001 (01 Oct 2011)

  01 Oct 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +sound-juicer-2.99.0_pre20111001.ebuild:
  Add gtk3 git snapshot of sound-juicer for GNOME 3

  30 Aug 2011; Gilles Dartiguelongue <eva@gentoo.org>
  sound-juicer-2.32.0-r1.ebuild:
  Add missing gnome2_src_prepare and fix position of src_prepare.

*sound-juicer-2.32.0-r1 (29 Aug 2011)

  29 Aug 2011; Sebastian Pipping <sping@gentoo.org>
  +sound-juicer-2.32.0-r1.ebuild,
  +files/sound-juicer-2.32.0-desktop-file.patch, metadata.xml:
  Fix desktop icon (bug #377855)

  12 Jun 2011; Pacho Ramos <pacho@gentoo.org> sound-juicer-2.32.0.ebuild:
  RDEPEND on gnome-base/gvfs[cdda,udev] to prevent problems recognizing drives
  (bug #371089 by Allan Gottlieb and fix by Alexandre Rostovtsev).

  14 Apr 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  sound-juicer-2.32.0.ebuild:
  Restrict version dependency on gnome-media. Newer versions don't install
  libgnome-media-profiles.

  27 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -sound-juicer-2.28.2-r1.ebuild, -sound-juicer-2.28.2-r2.ebuild,
  sound-juicer-2.32.0.ebuild:
  Fix slot-deps on gnome libs, remove old

  22 Mar 2011; Brent Baude <ranger@gentoo.org> sound-juicer-2.32.0.ebuild:
  Marking sound-juicer-2.32.0 ppc stable for bug 353436