@@ -1,19 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX sound-juicer-2.28.2-fix-pause-conflict.patch 457 RMD160 ce0a4aeed67d5b4c529cbcfd1dad11cfeb9e66fa SHA1 1d7a67d400ec8cbd2c39d64b9e134c58199d83dd SHA256 cc2af2e6fd8731600020ee69052f5b27d092f4bb03a9e67c6373cb3fa6d05100
 AUX sound-juicer-2.32.0-desktop-file.patch 424 RMD160 0033839ffa10cfb6621c5405868266d708dd4759 SHA1 9577ebc41d2d75f3bb7b32645fbfbd5615445afe SHA256 28a2f792f7ec0df60e97b5e52cb9c431b2839a41e72c2cf71d870c030fd8ba99
 DIST sound-juicer-2.32.0.tar.bz2 2177250 RMD160 fc23e6a0e59285e4891d0abe3a381fa542489128 SHA1 a4ba891cd2e67095be3ff57154aa078b67d63b6c SHA256 f6040e19e50094daff9699dea3e9884ce3226a61f28acbe9ad3a0458975a305a
 DIST sound-juicer-2.99.0_pre20111001.tar.xz 1927196 RMD160 7542208a764f5774951c9bf56efb7e2a5ef20671 SHA1 9649a291d67bcd765c602897f4d83e572aa83199 SHA256 52f0f828bdb0b55abc123ea185213d3f8d28cd1e80136cc5c1165506b4323d4c
-EBUILD sound-juicer-2.32.0-r1.ebuild 1810 RMD160 8ef732de53cc0c7a1b503d4861826f9b7eca07f8 SHA1 1cc73f1ca07ee292d0e4c1681a1e10a421e68972 SHA256 e82b906e82512c888116762efb6c5df380d0209ffea91118e5fa979bc083dc4b
-EBUILD sound-juicer-2.32.0.ebuild 1665 RMD160 65ddfbdbbfdfb410627e89963be9079a541efcba SHA1 2b70630bd9ef0bfb07481de6de254133695d4b36 SHA256 f2ef35e2436ca348bbd6f5d86a8740c49930cfb748a668f693b4f46df623defd
-EBUILD sound-juicer-2.99.0_pre20111001.ebuild 1713 RMD160 e9c894be87d014a6334a71e9d265ac1fc614e274 SHA1 01a0f7d087a32737b78378cc2134de3d554d80aa SHA256 80c7eb073e9797acf62ea7a281923e6ccc20bd0e308522a5c61e1783577da960
-MISC ChangeLog 29518 RMD160 cf7bc265728d383e2a5581ff88cc5d2c43f0e156 SHA1 0366296267a9b7bc2d3bef1898a5146ba2add06c SHA256 fafd47a3816f1e6bd7c8be754286bf1aa870406e537522dc37ed0d224c302a1d
+EBUILD sound-juicer-2.32.0-r1.ebuild 1840 RMD160 5cc508fff0e94cd421ed324eae62be344e8166e0 SHA1 c110c6ea3762902505f3fc3600cc2cb99edd1ec5 SHA256 286ef27d249afe936fbd93d742959f913878107a358a92fe3b1fd53d1745c796
+EBUILD sound-juicer-2.32.0.ebuild 1697 RMD160 bac5536c0a1e654697f4aeef461cf9e8e2d25d4f SHA1 b1f7275aae8666eeba6140266a48afc81702b996 SHA256 ca1c737576b3038457823a6d1bb996da8b4fc6c42322dfa04299b466373f148e
+EBUILD sound-juicer-2.99.0_pre20111001.ebuild 1753 RMD160 24205b7208bd97ab23e44ed5c052b51d13a7bd62 SHA1 aa975fff809bbf66942b422191003b0de26ff4c1 SHA256 006b1243c0d44a40d44952cf5f90506db6cd8746bae3f5f528a362d3c79610b9
+MISC ChangeLog 29801 RMD160 2d133983f47f84803736b1cd0f40ce7053c8482a SHA1 c6d1c17610a01406fab6e221f803d26f9b6b18c8 SHA256 b3b55085589e135eec29a94b8b42f44cc623606bfdfcd7af2fa3c2cacf76a2ad
 MISC metadata.xml 275 RMD160 40e2a382a0d78c7fd5f01d6bc45b4180a5a37b86 SHA1 dee5e84793a232be987187c586a276a6e69eb305 SHA256 2311c3cb4877d0ff799af6fad1da6d510109de00474b2c098631ba5cbb0a54dd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk6th0kACgkQuQc30/atMkAN8wCcCTF85A2xDC5gmgXa3MVO28Kt
-6QgAn21k8qxAHOUqqfhhigL9PFxCNl+p
-=Z+se
+iF4EAREIAAYFAk6y3xkACgkQdjK8w9WeBnCA9AEAifj0mwfGFTdbZKTWSt1dWrRA
+ewR6jbz0P8hFKKol6BYA/3aJtseLBXlxpNE2XnFS9EXJlAD1ndqj/mMLtibb9V7/
+=q7Xv
 -----END PGP SIGNATURE-----
