@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/sound-juicer-2.99.0_pre20111001.ebuild,v 1.2 2011/10/01 15:08:23 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/sound-juicer-2.99.0_pre20111001.ebuild,v 1.3 2011/11/03 18:36:03 tetromino Exp $
 
 EAPI="4"
 GCONF_DEBUG="yes"
@@ -57,6 +57,6 @@ pkg_setup() {
 
 pkg_postinst() {
 	gnome2_pkg_postinst
-	ewarn "If ${PN} does not rip to some music format, please check your"
-	ewarn "USE flags on media-plugins/gst-plugins-meta"
+	ewarn "If ${PN} does not rip to some music format, please check your USE flags"
+	ewarn "on media-libs/libgnome-media-profiles and media-plugins/gst-plugins-meta"
 }
