@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/sound-juicer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.213 2011/10/30 17:20:03 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.214 2011/11/03 18:36:03 tetromino Exp $
+
+  03 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
+  sound-juicer-2.32.0.ebuild, sound-juicer-2.32.0-r1.ebuild,
+  sound-juicer-2.99.0_pre20111001.ebuild:
+  Update pkg_postinst message for bug #389119 (thanks to James Broadhead
+  <jamesbroadhead@gmail.com> for reporting).
 
   30 Oct 2011; Raúl Porcel <armin76@gentoo.org> sound-juicer-2.32.0-r1.ebuild:
   alpha/ia64/sparc stable wrt #385699
